# Garam-Storage-OS

./: .gitignore  Cargo.toml  config.toml  example.config.toml
garam-common/: Cargo.toml
garam-common/src/: lib.rs
garam-ctl/: Cargo.toml
garam-ctl/src/: main.rs
garam-daemon/: Cargo.toml
garam-daemon/src/: main.rs
garam-daemon/src/docker/: authz.rs  mod.rs
garam-daemon/src/hardware/: boot.rs  disks.rs  mod.rs  power.rs  sysmon.rs
garam-daemon/src/storage/: ghs.rs  lvm.rs  mod.rs  zfs.rs
garam-web/: index.html  package.json  tsconfig.server.json  vite.config.ts
garam-web/src/: App.tsx  server.ts
garam-web/src/client/: Widget.tsx
