[package]
name = "garam-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = "0.3"