[package]
name = "garam-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
garam-common = { path = "../garam-common" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }