[package]
name = "garam-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
garam-common = { path = "../garam-common" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4"
# 🔥 아래 2개를 반드시 추가하십시오!
futures = "0.3"
bytes = "1.0"