[package]
name = "garam-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = "0.21"
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
udev = "0.9.3"
axum = "0.7"                           
nix = { version = "0.29", features = ["user", "fs"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
lazy_static = "1.4"
scopeguard = "1.2"
uuid = { version = "1.7", features = ["v4"] }

garam-common = { path = "../garam-common" }